kubernetes/api-deployment.yaml
# Deployment
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: regrid-api
  namespace: regrid
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: regrid-api
    spec:
      containers:
        - image: informaticslab/regriding_api
          imagePullPolicy: Always
          name: regrid-api
          resources:
            requests:
              cpu: 50m
              memory: 100Mi
