kubernetes/dask-worker.yaml
# Deployment
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: dask-workers
  namespace: regrid
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: dask-workers
    spec:
      containers:
        - image: informaticslab/regridding_processor:kubenetes
          command: ["sh", "-c"]
          args:
            - dask-worker dask:8786 --nprocs 1 --nthreads 1 --host $POD_IP --name $POD_NAME
          imagePullPolicy: Always
          name: dask-worker
          resources:
            requests:
              cpu: 100m
              memory: 1Gi
