kubernetes/processor-deployment.yaml
# Deployment
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: regrid-processor
  namespace: regrid
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: regrid-processor
    spec:
      containers:
        - image: informaticslab/regridding_processor:kubenetes
          imagePullPolicy: Always
          name: regrid-processor
          resources:
            requests:
              cpu: 50m
              memory: 100Mi
