kubernetes/messaging-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: regrid-messaging
  namespace: regrid
spec:
  ports:
    - port: 5672
      name: amqp
  selector:
    app: regrid-messaging
