kubernetes/messaging.yaml
# Deployment
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: regrid-messaging
  namespace: regrid
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: regrid-messaging
    spec:
      containers:
        - image: rabbitmq
          imagePullPolicy: Always
          name: regrid-messaging
          

          resources:
            requests:
              cpu: 50m
              memory: 100Mi
---
# Service
apiVersion: v1
kind: Service
metadata:
  name: regrid-messaging
  namespace: regrid
spec:
  ports:
    - port: 5672
      name: amqp
  selector:
    app: regrid-messaging
---
