kubernetes/api.yaml
# Deployment
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: regrid-api
  namespace: regrid
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: regrid-api
    spec:
      containers:
        - image: informaticslab/regriding_api
          imagePullPolicy: Always
          name: regrid-api
          resources:
            requests:
              cpu: 50m
              memory: 100Mi
---
# Service
kind: Service
metadata:
  name: regrid-api
  namespace: regrid
spec:
  ports:
    - port: 80
      targetPort: 5000
      protocol: TCP
  selector:
    app: regrid-api
---
# Ingress
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: regrid.informaticslab.co.uk
  namespace: regrid
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - regrid.informaticslab.co.uk
    secretName: regrid-api-tls
  rules:
  - host: regrid.informaticslab.co.uk
    http:
      paths:
      - path: /
        backend:
          serviceName: regrid-api
          servicePort: 80
